--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Lab 6</title>
 
      
-        <script type="text/javascript" src="cook.js"></script>
+        <script type="text/javascript" src="topoptransf.js"></script>
 
          <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
            integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
