--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <head>
         <title>Lab 6</title>
 
+        <style>
+            #map {
+                height: 600px;  /* or any other height you want */
+                width: 100%;
+            }
      
         <script type="text/javascript" src="toppoptransf.js"></script>
 
