--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
         <style>
             #map {
-                height: 600px;  /* or any other height you want */
-                width: 100%;
+                height: 100%;
             }
      
         <script type="text/javascript" src="toppoptransf.js"></script>
