--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             #map {
                 height: 100%;
             }
+        </style>
      
         <script type="text/javascript" src="toppoptransf.js"></script>
 
