--- a/index.html
+++ b/index.html
@@ -69,6 +69,43 @@
                             y: 'A_lat'
                         }
                     },
+
+                    canvasBezierStyle: {
+                    //This example demonstrates the use of graduated symbols (class breaks) for the flowlines
+                    //Other options: https://developers.arcgis.com/documentation/common-data-types/renderer-objects.htm
+                      type: 'classBreaks',
+                      field: 'Net_B2A', // The field/value to be used for symbolizing the lines
+                    
+                      // Define the classes and symbols below
+                      classBreakInfos: [{
+                        classMinValue: 400,  // break values of this class, using field values defined above
+                        classMaxValue: 433,
+                        symbol: {  // Define the symbology for this class
+                                   // See an example from the documentation:https://github.com/jwasilgeo/Leaflet.Canvas-Flowmap-Layer/blob/master/docs/class-breaks-symbology/index.html#L94-L137
+                          strokeStyle: '#AD0755',  // flow line color
+                          lineWidth: 10,  // flow line width
+                          lineCap: 'round',  // shape of the stroke end
+                        }
+                      }, {  // another class
+                        classMinValue: 300,
+                        classMaxValue: 399,
+                        symbol: {
+                          strokeStyle: '#B21D63',
+                          lineWidth: 6,
+                          lineCap: 'round',
+                        }
+                      }, {  // one more class
+                        classMinValue: 200,
+                        classMaxValue: 299,
+                        symbol: {
+                          strokeStyle: '#CA2070',
+                          lineWidth: 3.5,
+                          lineCap: 'round',
+                        }
+                      }],
+                    },
+
+                    
                     pathDisplayMode: 'all',
                     animationStarted: true,
                     animationEasingFamily: 'Cubic',
