--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     canvasBezierStyle: {
                    
                       type: 'classBreaks',
-                      field: 'Net_B2A', // The field/value to be used for symbolizing the lines
+                      field: 'Net_B2A_Pos', // The field/value to be used for symbolizing the lines
                     
                       // Define the classes and symbols below
                       classBreakInfos: [{
