--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     pathDisplayMode: 'all',
                     animationStarted: true,
                     animationEasingFamily: 'Cubic',
-                    animationEasingType: 'Out',
+                    animationEasingType: 'In',
                     animationDuration: 2000
                 }).addTo(map);
 
