--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         classMaxValue: 650,
                         symbol: {  // Define the symbology for this class
                                    // See an example from the documentation:https://github.com/jwasilgeo/Leaflet.Canvas-Flowmap-Layer/blob/master/docs/class-breaks-symbology/index.html#L94-L137
-                          strokeStyle: '#AD0755',  // flow line color
+                          strokeStyle: '#eb4034',  // flow line color
                           lineWidth: 10,  // flow line width
                           lineCap: 'round',  // shape of the stroke end
                         }
@@ -92,7 +92,7 @@
                         classMinValue: 550,
                         classMaxValue: 610,
                         symbol: {
-                          strokeStyle: '#B21D63',
+                          strokeStyle: '#ebe234',
                           lineWidth: 6,
                           lineCap: 'round',
                         }
@@ -100,7 +100,7 @@
                         classMinValue: 480,
                         classMaxValue: 530,
                         symbol: {
-                          strokeStyle: '#CA2070',
+                          strokeStyle: '#ebe234',
                           lineWidth: 3.5,
                           lineCap: 'round',
                         }
