--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         classMinValue: 550,
                         classMaxValue: 610,
                         symbol: {
-                          strokeStyle: '#ebe234',
+                          strokeStyle: '#ebb134',
                           lineWidth: 15,
                           lineCap: 'round',
                         }
